Fix animation and z-index of project poster

--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -34,6 +34,8 @@
 }
 
 .project__poster {
+    position: relative;
+    z-index: 1;
     @include mq($until: sm) {
         max-width: 250px;
     }
